--- a/s/css/main.css
+++ b/s/css/main.css
@@ -169,9 +169,12 @@ html {
 #sidebar div.tables-list .title div.dropdown-menu div.dropdown-cursor {
   position: absolute;
   display: block;
-  margin-top: 17px;
+  margin-top: 13px;
   margin-right: 15px;
   cursor: pointer;
+  background-color: #ff0000;
+  padding: 4px;
+  padding-right: 8px;
   color: #ffffff;
   top: 0px;
   left:0;
@@ -637,9 +640,9 @@ html {
 
 #connection_window div.connection-window-footer {
   text-align: center;
-  font-family:Lato-Regular;
-  font-size:18px;
-  color:#587CA7;
+  font-family: Lato-Regular;
+  font-size: 15px;
+  color: #587CA7;
 }
 
 #connection_window i.fa.fa-lock {
