changed alert bar colors

--- a/s/css/main.css
+++ b/s/css/main.css
@@ -775,7 +775,8 @@ html {
     top: 0;
     left: 0;
     right: 0;
-    background: #fd6043;
+    background-color: #fd8053;
+    color: #fff;
     text-align: center;
     line-height: 2.5;
     overflow: hidden;
