--- a/s/css/main.css
+++ b/s/css/main.css
@@ -108,7 +108,7 @@ body {
   left: 0px;
   top: 0px;
   bottom: 0px;
-  border-right: 1px solid black;
+  /*border-right: 1px solid black;*/
   background-color: #fff;
 }
 
