--- a/s/css/main.css
+++ b/s/css/main.css
@@ -247,7 +247,7 @@ body {
   height: 33px;
   padding: 0px 8px;
   padding-left: 15px;
-  color: #efefef;;
+  color: #efefef;
   font-size: 14px;
   background-color: #377CE4;
   margin-left: auto;
