removed id="tables"

--- a/s/css/main.css
+++ b/s/css/main.css
@@ -221,7 +221,7 @@ body {
   background-color: #ffffff;
 }
 
-#sidebar div.tables-list #tables {
+#sidebar div.tables-list {
   padding: 50px 0 0;
   font-size: 12px;
 }
