--- a/s/css/main.css
+++ b/s/css/main.css
@@ -744,6 +744,17 @@ h4.modal-title {
   margin-top: 20px;
 }
 
+.logo-container {
+    margin: 10px;
+    height: 100px;
+    line-height: 100px;
+    text-align: center;
+}
+.resize_fit_center {
+    max-width:100%;
+    max-height:100%;
+    vertical-align: middle;
+}
 
 
 /*******************************************************/
