--- a/website/www/style.css
+++ b/website/www/style.css
@@ -187,6 +187,7 @@ nav {
 
 .footer {
   padding-top: 30px;
+  padding-bottom: 30px;
   border-top: 1px solid #f8f9fb;
 }
 
@@ -246,10 +247,10 @@ div .window-center {
   left:0;
   top:0px;
   padding-top: 55px;
-  padding-bottom: 150px;
+  padding-bottom: 100px;
   text-align: center;
   width: 100%;
-  height: 100%;
+  min-height: 80%;
   background-color: #f8f9fb;
 }
 
