--- a/s/css/main.css
+++ b/s/css/main.css
@@ -760,8 +760,8 @@ h4.modal-title {
 }
 
 .resize_fit_center {
-    max-width:100%;
-    max-height:100%;
+    /*max-width:100%;*/
+    /*max-height:100%;*/
     vertical-align: middle;
 }
 
